--- a/end.html
+++ b/end.html
@@ -120,7 +120,7 @@
 </head>
 <body>
     <div class="text-container" onclick="_switch()">
-        <h1 data-splitting>stream starting</h1>
+        <h1 data-splitting>stream ending</h1>
     </div>
     <script type="text/javascript">
         Splitting();
