--- a/idle.html
+++ b/idle.html
@@ -35,7 +35,7 @@
             top: 0;
             clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 100% 0%);
             /* transition: clip-path 1s, background-color 2s, text-shadow 2s, color 2s; */
-            transition: clip-path 1s;
+            transition: clip-path 2s;
         }
         h1, h3 {
             margin: 0;
@@ -48,16 +48,20 @@
             font-size: 250%;
         }
         h1 .char {
-            --delay: calc((var(--char-index) + 1) * 100);
-            animation: sway 4000ms ease-in-out infinite;
+            --delay: calc((var(--char-index) + 1) * 200ms);
+            animation: sway 2000ms ease-in-out infinite;
             animation-delay: var(--delay);
+            float: left;
+        }
+        .char:last-child {
+            margin-right: 40px;
         }
         @keyframes sway {
             0% {
                 margin-top: 0;
             }
             50% {
-                margin-top: -10px;
+                margin-top: 20px;
             }
             100% {
                 margin-top: 0;
@@ -121,7 +125,7 @@
 
         let backElement = document.getElementById("front");
         let frontElement = document.getElementById("back");
-        setInterval(clipPath, 1010, backElement);
+        setInterval(clipPath, 2020, backElement);
         //setInterval(swapStyles, 5000, backElement, frontElement);
     </script>
 </body>
